# embody-serial

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: constraints.txt  dependabot-auto-merge.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
examples/: file_download_example.py
src/embodyserial/: __init__.py  __main__.py  cli.py  communicator.py  embody_serial_communicator.py  embodyserial.py  exceptions.py  helpers.py  listeners.py  logging.py  win32usbhelper.py
tests/: __init__.py  conftest.py  test_communicator.py  test_concurrent_callbacks.py  test_connection_handling.py  test_embodyserial.py  test_error_validation.py  test_file_download.py  test_helpers.py  test_main.py  test_resource_management.py
