[tool.poetry]
name = "embody-serial-communicator"
version = "0.1.2"
description = "Embody Serial Communicator"
authors = ["Espen Westgaard <espen@aidee.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aidee-health/embody-serial-communicator"
repository = "https://github.com/aidee-health/embody-serial-communicator"
documentation = "https://embody-serial-communicator.readthedocs.io"
packages = [
    { include = "embodyserial", from = "src" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/aidee-health/embody-serial-communicator/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.1"
embodycodec = {git = "https://github.com/aidee-health/embody-protocol-codec.git", rev = "main"}
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1,<5.0.0" # Espen: pre-commit run --all-files --hook-stage=manual --show-diff-on-failure fails with 5.0
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
embody-serial-communicator = "embodyserial.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["embodyserial", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 5 # Increase once we have refactored and added tests

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
